--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atzuki_dollar",
   "version": "1.0.0",
-  "description": "",
+  "description": "Personal JavaScript utility library",
   "main": "index.js",
   "scripts": {
     "ts": "tsc",
@@ -13,9 +13,9 @@
   "author": "borecjeborec1",
   "license": "MIT",
   "devDependencies": {
+    "typedoc": "^0.22.13",
+    "typedoc-bitbucket-theme": "^1.0.0",
+    "typedoc-plugin-markdown": "^3.11.14",
     "typescript": "4.5"
-  },
-  "dependencies": {
-    "typedoc-ngx-theme": "^0.0.3"
   }
 }
