--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "atzuki_dollar",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Personal JavaScript utility library",
-  "main": "index.js",
+  "main": "./javascript/index.js",
   "scripts": {
     "ts": "tsc",
     "min": "node ./build/compact.js",
     "dev": "tsc -w",
     "docs": "npx typedoc --out ../docs ./typescript/index.ts",
-    "build": "npm run ts && npm run min && npm run ts && npm run docs"
+    "build": "npm run ts && npm run min && npm run ts",
+    "build:all": "npm run ts && npm run min && npm run ts && npm run docs"
   },
   "author": "borecjeborec1",
   "license": "MIT",
