--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "ts": "tsc",
     "min": "node ./build/compact.js",
     "version": "node ./build/version.js",
+    "class": "node ./build/class.js",
     "dev": "tsc -w",
     "docs": "npx typedoc --out ../docs ./typescript/index.ts",
-    "build": "npm run version && npm run min && npm run ts",
+    "build": "npm run version && npm run class && npm run min && npm run ts",
     "build:all": "npm run version && npm run min && npm run ts && npm run docs"
   },
   "author": "borecjeborec1",
